# diting

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SKILL.md  cli.py  pyproject.toml
.claude/agents/: code-reviewer.md  doc-generator.md  feature-developer.md  llm-developer.md  test-writer.md
.claude/commands/: check-ci.md  commit-and-push.md  create-pr.md  local-ci.md  merge-pr.md
.claude/instincts/: conventional-commits.md  github-flow.md  modular-refactor.md  spec-kit-workflow.md  test-structure.md
.github/: branch-protection-rules.md  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  test.yml
.specify/memory/: api-client-standards.md  constitution.md  github-flow-guard.md  security-checklist.md
.specify/scripts/: check-branch.sh
.specify/workflows/: INTEGRATION.md  spec-kit-github-flow-checklist.md
assets/fonts/: README.md
config/: llm.yaml.example  wechat.yaml.example
deploy/: diting-parquet-dump.service  diting-parquet-dump.timer  diting.service
docs/: TODO-llm-improvements.md  chatroom-analysis-architecture.md  llm-analysis-refermsg-optimization.md  refactoring-plan.md  wechat-analysis-workflow.md  wechat-message-schema.md  wechat-protocol-api-summary.md  wechat-xml-types.md  微信协议.md
docs/architecture/: metadata-storage-design.md
docs/archive/: refactoring-plan-049.md
docs/ci-cd/: act-setup.md  environment-differences.md  rocky-linux-setup.md  secrets-management.md  troubleshooting.md  workflows-overview.md
docs/configuration/: environment-variables.md
docs/development/: claude-hooks.md
docs/workflow/: commit-convention.md  github-flow.md
scripts/: test_aliyun_ocr.py
specs/001-wechat-api-connectivity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-python-dev-setup/: data-model.md  plan.md  quickstart.md  research-logging.md  research.md  spec.md  tasks.md
specs/003-wechat-notification-webhook/: clarifications.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-github-ci-aliyun-deploy/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/005-github-ci-aliyun-deploy/: DEPLOYMENT_CONFIG.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-message-storage/: spec.md
specs/006-wechat-message-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/035-refactor-analysis/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py
src/cli/: __init__.py  storage_commands.py
src/diting/: __init__.py  config.py
src/lib/: atomic_io.py  file_lock.py  image_xml_parser.py  parquet_utils.py
src/models/: __init__.py  image_schema.py  llm_analysis.py  message_schema.py  parquet_schemas.py  wechat_message_schema.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_archive_api.py  test_jsonl_writer.py  test_message_schema.py  test_parquet_converter.py  test_query_api.py  (+1 more)
(+273 files in other folders)
