[project]
name = "diting"
version = "0.1.0"
description = "Diting (谛听) - 个人信息助理项目"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Diting Team"},
]
keywords = ["personal-assistant", "knowledge-graph", "privacy-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# 运行时依赖
dependencies = [
    "httpx>=0.28.0,<1.0.0",
    "structlog>=24.1.0,<25.0.0",
    "orjson>=3.9.0,<4.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.1.0,<9.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pyarrow>=23.0.0",
    "portalocker>=3.2.0",
]

# 开发依赖
[project.optional-dependencies]
dev = [
    "ruff>=0.1.0,<0.2.0",
    "mypy>=1.7.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "pytest-httpx>=0.35.0,<1.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "jsonschema>=4.20.0,<5.0.0",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
diting = "cli:cli"

[project.urls]
Homepage = "https://github.com/diting/diting"
Documentation = "https://github.com/diting/diting/tree/main/docs"
Repository = "https://github.com/diting/diting"
"Bug Reports" = "https://github.com/diting/diting/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diting"]

# Ruff 配置
[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
exclude = [
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

# Mypy 配置
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

# 未来逐步启用:
# strict = true
# disallow_untyped_defs = true

# Pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Coverage 配置
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__init__.py",
    ".venv/*",
    "src/diting/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
